@@ -1,3 +1,5 @@
+- Refactor: Make compatible with latest version of academic-core
+
 2.5.0 (18-10-2022)
 - Refactor: Remove unused Struts module configuration 
 
